# skein

./: .gitignore  Cargo.toml
docs/: getting-started.md  skein-runtime-plan.md  test-bridge-plan.md
loam/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  siteindex.html  test-harness-p2p.html  test-harness-sync.html  vite.config.ts  vite.standalone.config.ts
loam/src/canvas/: connection-status.ts  init.ts  lasso-tool.ts  presence-manager.ts  presence-renderer.ts  property-tray.ts  share-dialog.ts  toolbar.ts  touch-device.ts  widget-frame.ts  widget-manager.ts  widget-overlay.ts
loam/src/dev/: gallery.ts  p2p-test-bootstrap.ts  sync-test-bootstrap.ts  test-bootstrap.ts  test-bridge.ts
loam/src/fonts/: font-loader.ts
loam/src/media/: audio-manager.test.ts  media-urls.ts
loam/src/p2p/: endpoint-control.ts  friends-protocol.test.ts  friends-protocol.ts  identity.ts  iroh-network-adapter.test.ts  iroh-network-adapter.ts  skein-handler.ts  sqlite-social-doc.ts  tauri-transport.ts
loam/src/standalone/: boot.ts  canvas-watchers.ts  friendz-wiring.ts  narthex-seed.ts
loam/src/storage/: skein-blob-store.ts
loam/src/utils/: log.ts
loam/src/widgets/: dom-overlay.ts  file-utils.ts  image-utils.ts  skein-input.ts  widget-types.ts
loam/src/workers/: blob-worker-client.ts  blob-worker.ts
loam/tests/: canvas-store.test.ts  edit-mode.test.ts  image-and-profile.test.ts  init.test.ts  multi-peer-mesh.spec.ts  multi-select.test.ts  narthex.test.ts  p2p-sync.spec.ts  texture-lifecycle.test.ts  tsconfig.json
loam/tests/fixtures/: canvas-page.ts  p2p-page.ts
loam/tests/helpers/: skein-bridge.ts
loam/widgets/: audio-recording.ts  canvas-info.test.ts  canvas-info.ts  doodle.ts  file.ts  index.ts  label.ts  markdown.ts
loam/widgets/narthex/: messagez-widget.ts  narthex-registry.test.ts  trash-widget.ts
loam/widgets/narthex/social/: friends-tab.ts  profile-tab.ts  requests-tab.ts  settings-tab.ts  social-widget.test.ts  social-widget.ts
loam/widgets/peedeeeff/: index.ts  pages.ts  snatch.ts
midden/: Cargo.toml  README.md
midden/pkg/: midden.d.ts  midden_bg.js  midden_bg.wasm.d.ts  package-lock.json  package.json
midden/src/: lib.rs
reliquary/: Cargo.toml
reliquary/migrationz/: 20260101000000_init.sql
reliquary/src/: blobz.rs  db.rs  friendz.rs  groupz.rs  hub_repo.rs  lib.rs  main.rs  service.rs  settingz.rs  snatch.rs  sync.rs  userz.rs
reliquary/src/documents/: widgets.rs
reliquary/src/hub/: avatar.rs  canvas.rs  messages.rs  mod.rs
reliquary/src/protocol/: blob_proxy.rs  handler.rs  messages.rs  mod.rs
skein/: package.json  settings.html
skein/src/p2p/: friends-protocol.ts  iroh-network-adapter.ts  skein-handler.ts  tauri-transport.ts
skein/src/standalone/: friendz-wiring.ts  settings-entry.ts  tauri-settings.ts
skein/src/widgets/: file-utils.ts
tauri/: Cargo.toml  Info.plist  README.md  tauri.conf.json
tauri/capabilities/: default.json  settings.json
tauri/icons/: icon.icns
tauri/src/: commands.rs  lib.rs  pdf.rs  streams.rs
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
