[package]
name = "skein"
version = "0.1.0"
edition = "2021"
description = "skein desktop shell"

[lib]
name = "skein_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "skein"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
iroh = "1.0.1"
iroh-blobs = "0.103.0"
n0-future = "0.3"
base64 = "0.22"
blake3 = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
toml = "0.8"

reliquary = { path = "../reliquary" }
